--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "prettier": "prettier src",
+    "prettier:fix": "prettier src -w",
+    "eslint": "eslint src",
+    "eslint:fix": "eslint src --fix"
   },
   "dependencies": {
     "@octokit/types": "^13.6.2",
@@ -24,15 +28,24 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.16.0",
+    "@ianvs/prettier-plugin-sort-imports": "4.4.0",
+    "@types/node": "22.10.2",
     "@tauri-apps/cli": "^2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.22",
+    "eslint": "9.16.0",
+    "eslint-config-prettier": "9.1.0",
     "postcss": "^8.4.49",
+    "prettier": "3.4.2",
+    "prettier-eslint-cli": "8.0.1",
+    "prettier-plugin-tailwindcss": "0.6.9",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.2.2",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.18.0",
     "vite": "^5.3.1"
   }
 }
