--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,8 +2,8 @@
 name = "poe2-filters-manager"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
-edition = "2021"
+authors = ["vasilvestre"]
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
